fix nav z-index

--- a/stylesheets/default.css
+++ b/stylesheets/default.css
@@ -20,6 +20,7 @@ nav{
   width: 100%;
   background:#FFF;
   top:0;
+  z-index: 10;
 
 }
 
